--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
         "intervention/image": "^2.4",
         "laravel/framework": "5.6.*",
         "laravel/tinker": "^1.0",
-        "laravelcollective/html": "~5.0"
+        "laravelcollective/html": "~5.0",
+        "gloudemans/shoppingcart": "~1.3"
     },
     "require-dev": {
         "filp/whoops": "^2.0",
